--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,53 @@
-Flask
-Flask-SQLAlchemy
-PyJWT
-werkzeug
-pytest-flask
-pytest
+annotated-types==0.7.0
+anyio==4.11.0
+attrs==25.4.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.0
+cryptography==46.0.3
+ecdsa==0.19.1
+fastapi==0.119.1
+fastapi-client==0.1.0
+flasgger==0.9.7.1
+Flask==3.1.2
+Flask-SQLAlchemy==3.1.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+MarkupSafe==3.0.3
+mistune==3.1.4
+packaging==25.0
+passlib==1.7.4
+pluggy==1.6.0
+pyasn1==0.6.1
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==8.4.2
+pytest-flask==1.3.0
+python-jose==3.5.0
+PyYAML==6.0.3
+referencing==0.37.0
+requests==2.32.5
+rpds-py==0.27.1
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+starlette==0.48.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+uvicorn==0.38.0
+Werkzeug==3.1.3
